r2756: *** empty log message ***

--- a/debian/rules
+++ b/debian/rules
@@ -52,7 +52,7 @@ lispdir-mysql	:= $(clc-mysql)/db-mysql
 sodir-mysql	:= usr/lib/clsql
 clc-pg		:= $(clc-source)/clsql-postgresql
 lispdir-pg	:= $(clc-pg)/db-postgresql
-clc-socket 	:= $(clc-source)/clsql-postgresql-socket
+clc-pg-socket 	:= $(clc-source)/clsql-postgresql-socket
 lispdir-pg-socket := $(clc-pg-socket)/db-postgresql-socket
 clc-aodbc	:= $(clc-source)/clsql-aodbc
 lispdir-aodbc	:= $(clc-aodbc)/db-aodbc
