--- a/db-postgresql-socket/.cvsignore
+++ b/db-postgresql-socket/.cvsignore
@@ -1,2 +1,13 @@
-configure-stamp
-build-stamp
+clsql-uffi.so
+clsql-uffi.dll
+clsql-uffi.lib
+clsql-uffi.dylib
+.bin
+*.fasl
+*.pfsl
+*.dfsl
+*.cfsl
+*.fasla16
+*.fasla8
+*.faslm16
+*.faslm8
