--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,7 @@ Section: devel
 Priority: extra
 Maintainer: Kevin M. Rosenberg <kmr@debian.org>
 Build-Depends: debhelper (>= 4.0.0), libmysqlclient-dev, postgresql-dev
+Build-Depends-Indep: debhelper (>= 4.0.0)
 Standards-Version: 3.5.9.0
 
 Package: cl-sql
