r8260: Automated commit for Debian build of clsql upstream-version-1.8.6

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -56,6 +56,10 @@ HTMLFILE:=${DOCFILE_BASE}.html
 TMPFILES:=${DOCFILE_BASE}.aux ${DOCFILE_BASE}.out ${DOCFILE_BASE}.log
 DOCFILES:=$(shell echo *.xml *.xsl)
 
+ifeq ($(XSLTPROC),)
+  XSLTPROC:=xsltproc
+endif
+
 CATALOG:=`pwd`/catalog-${OS}.xml
 CHECK:=XML_CATALOG_FILES="$(CATALOG)" xmllint --noout --xinclude --postvalid $(DOCFILE) || exit 1
 
