--- a/Makefile.common
+++ b/Makefile.common
@@ -5,6 +5,7 @@ all:
 clean:
 	@rm -rf .bin
 	@rm -f *.ufsl *.fsl *.fas *.x86f *.sparcf *.fasl 
+	@rm -f *.fasla8 *.fasla16 *.faslm8 *.faslm16 *.faslmt
 	@rm -f *~ *.bak *.orig *.err \#*\# .#*
 	@rm -f *.so *.a
 	@rm -rf debian/cl-sql
